--- a/arch/arm/configs/kyle02_defconfig
+++ b/arch/arm/configs/kyle02_defconfig
@@ -32,7 +32,9 @@ CONFIG_IOSCHED_NOOP=y
 CONFIG_IOSCHED_DEADLINE=y
 CONFIG_IOSCHED_CFQ=y
 CONFIG_IOSCHED_ROW=y
-CONFIG_IOSCHED_VR=y
+CONFIG_IOSCHED_BFQ=y
+CONFIG_CGROUP_BFQIO=y
+#CONFIG_IOSCHED_VR=y
 CONFIG_IOSCHED_SIO=y
 CONFIG_ARCH_MSM=y
 CONFIG_ARCH_MSM7X27=y
