--- a/drivers/cpufreq/Kconfig
+++ b/drivers/cpufreq/Kconfig
@@ -112,9 +112,14 @@ config CPU_FREQ_DEFAULT_GOV_INTERACTIVE
 config CPU_FREQ_DEFAULT_GOV_SMARTASS2
 	bool "smartass2"
 	select CPU_FREQ_GOV_SMARTASS2
-	select CPU_FREQ_GOV_PERFORMANCE
 	help
 	  Use the CPUFreq governor 'smartassV2' as default.
+
+config CPU_FREQ_DEFAULT_GOV_SMARTASSH3
+	bool "smartassH3"
+	select CPU_FREQ_GOV_SMARTASSH3
+	help
+	  Use the CPUFreq governor 'SmartassH3' as default.
 
 endchoice
 
@@ -216,62 +221,16 @@ config CPU_FREQ_GOV_CONSERVATIVE
 config CPU_FREQ_GOV_SMARTASS2
 	tristate "'smartassV2' cpufreq governor"
 	depends on CPU_FREQ
-	default y
 	help
 	  'smartassV2' - a "smart" governor
 
 	  If in doubt, say N.
 
-config CPU_FREQ_GOV_ADAPTIVE
-        tristate "'adaptive' cpufreq governor"
-        depends on CPU_FREQ
-        help
-         Use the CPUFreq governor 'adaptive' as default. This allows
-         you to get a full dynamic cpu frequency capable system by simply
-         loading your cpufreq low-level hardware driver, using the
-         'adaptive' governor for latency-sensitive workloads and demanding
-         performance.
-
-         If in doubt, say N.
-
-config CPU_FREQ_GOV_LULZACTIVE
-        tristate "'lulzactive' cpufreq governor"
-        depends on CPU_FREQ
-        help
-         'lulzactive' - a new interactive governor by Tegrak!
-
-         If in doubt, say N.
-
-config CPU_FREQ_GOV_INTERACTIVEX
-        tristate "'interactiveX' cpufreq policy governor"
-        depends on CPU_FREQ
-        default y
-        help
-         'InteractiveX' - Modified version of interactive with sleep+wake code.
-
-         If in doubt, say N.
-
-config CPU_FREQ_GOV_SAVAGEDZEN
-        tristate "'savagedzen' cpufreq governor"
-        depends on CPU_FREQ
-        default y
-        help
-         'Savaged-Zen' - a "smartass" based governor
-
-         If in doubt, say N.
-
-config CPU_FREQ_VDD_LEVELS
-  	bool "CPU Vdd levels sysfs interface"
-  	depends on CPU_FREQ_STAT
-  	depends on ARCH_MSM7X27A
-  	default n
-  	help
-    		CPU Vdd levels sysfs interface
-
-config SEC_DVFS
-	bool "DVFS job"
-	default n
+config CPU_FREQ_GOV_SMARTASSH3
+	tristate "'SmartassH3' cpufreq governor"
 	depends on CPU_FREQ
+	help
+	  'SmartassH3' - a "smartassV2 with tweaks by H3ROS" governor!
 
 menu "x86 CPU frequency scaling drivers"
 depends on X86
